# Algorithms_and_data_structures_OTUS

./: README.md
1_tickets/: CMakeLists.txt  spells.txt  start.sh  ticketsHW.cpp  ticletsHW.cpp
testSystem/: CMakeLists.txt  cTester.cpp  cTester.h
